<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/login"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editText"
        android:hint="@string/username_input_hint" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editText"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:fontFamily="sans-serif"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing">

        <Button
            android:id="@+id/login_button"
            style="@style/button"
            android:layout_weight="0.5"
            android:text="@string/login_button_label"
            android:onClick="connect"/>

        <Button
            android:id="@+id/signup_button"
            style="@style/button"
            android:layout_marginLeft="@dimen/com_parse_ui_small_horizontal_spacing"
            android:layout_weight="0.5"
            android:text="@string/signup_button_label" />
    </LinearLayout>

    <Button
        android:id="@+id/login_help"
        style="@style/helpButton"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:layout_marginBottom="@dimen/com_parse_ui_small_vertical_spacing"
        android:text="@string/forgot_password_button_label" />
</LinearLayout>
